<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="net.zadsoluions.linkplanner.LinkData" >   
	
		<RelativeLayout 
		    android:id="@+id/link_data_site_a_rl"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true">
		    <TextView 
		        android:id="@+id/link_data_site_a_name_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:text="@string/site_name"/>
		    <EditText 
		        android:id="@+id/link_data_site_a_name_txt"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_name_lbl"
		        android:inputType="text"/>
		    <TextView 
		        android:id="@+id/link_data_site_a_lat_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_name_txt"
		        android:text="@string/lat"/>
		    <EditText 
		        android:id="@+id/link_data_site_a_lat_txt"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_lat_lbl"
		        android:inputType="numberDecimal|numberSigned"/>
		    <Button 
		        android:id="@+id/link_data_site_a_gps_lat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/link_data_site_a_lat_lbl"
		        android:text="@string/gps"/>
		   <Button 
		        android:id="@+id/link_data_site_a_map_lat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toLeftOf="@+id/link_data_site_a_gps_lat"
		        android:layout_below="@+id/link_data_site_a_lat_lbl"
		        android:text="@string/map"/>
		   <TextView 
		        android:id="@+id/link_data_site_a_lng_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_map_lat"
		        android:text="@string/lng"/>
		    <EditText 
		        android:id="@+id/link_data_site_a_lng_txt"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_lng_lbl"
		        android:inputType="numberDecimal|numberSigned"/>
		    <TextView 
		        android:id="@+id/link_data_site_a_hieght"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/link_data_site_a_lng_txt"
		        android:text="@string/height"/>
		    <EditText 
		        android:id="@+id/link_data_site_a_txt_height"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_a_hieght"
		        android:inputType="numberDecimal"/>
		</RelativeLayout>
	    
		<RelativeLayout 
		    android:id="@+id/link_data_site_b_rl"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/link_data_site_a_rl"
		    android:layout_marginTop="10dp">
		    <TextView 
		        android:id="@+id/link_data_site_b_name_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:text="@string/site_name"/>
		    <EditText 
		        android:id="@+id/link_data_site_b_name_txt"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_name_lbl"
		        android:inputType="text"/>
		    <TextView 
		        android:id="@+id/link_data_site_b_lat_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_name_txt"
		        android:text="@string/lat"/>
		    <EditText 
		        android:id="@+id/link_data_site_b_lat_txt"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_lat_lbl"
		        android:inputType="numberDecimal|numberSigned"/>
		    <Button 
		        android:id="@+id/link_data_site_b_gps_lat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/link_data_site_b_lat_lbl"
		        android:text="@string/gps"/>
		   <Button 
		        android:id="@+id/link_data_site_b_map_lat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toLeftOf="@+id/link_data_site_b_gps_lat"
		        android:layout_below="@+id/link_data_site_b_lat_lbl"
		        android:text="@string/map"/>
		   <TextView 
		        android:id="@+id/link_data_site_b_lng_lbl"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_map_lat"
		        android:text="@string/lng"/>
		    <EditText 
		        android:id="@+id/link_data_site_b_lng_txt"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_lng_lbl"
		        android:inputType="numberDecimal|numberSigned"/>
		    <TextView 
		        android:id="@+id/link_data_site_b_hieght"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/link_data_site_b_lng_txt"
		        android:text="@string/height"/>
		    <EditText 
		        android:id="@+id/link_data_site_b_txt_height"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_site_b_hieght"
		        android:inputType="numberDecimal"/>
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/link_data_bottom_rl"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/link_data_site_b_rl"
		    android:layout_marginTop="5dp">
		    <TextView 
		        android:id="@+id/link_data_lbl_freq"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:text="@string/freq"/>
		    <EditText 
		        android:id="@+id/link_data_txt_freq"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_lbl_freq"
		        android:inputType="number"/>
		    <Button 
		        android:id="@+id/link_data_btn_calculate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/link_data_txt_freq"
		        android:text="@string/calc"/>
		</RelativeLayout>
	
	</RelativeLayout>
</ScrollView>