<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.zadsoluions.linkplanner.MapView" >
    
    <RelativeLayout 
        android:id="@+id/mapview_top_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <TextView 
            android:id="@+id/mapview_lbl_site_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/mapview_site_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapview_top_rl"
        android:layout_marginTop="5dp" 
        >
        <TextView 
            android:id="@+id/mapview_lbl_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignBaseline="@+id/mapview_txt_lat"
            android:text="@string/lat"/>
        <EditText 
            android:id="@+id/mapview_txt_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mapview_lbl_lat"
            android:inputType="number"/>
       <TextView 
            android:id="@+id/mapview_lbl_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mapview_txt_lat"
            android:layout_alignBaseline="@+id/mapview_txt_lng"
            android:text="@string/lng"/>
        <EditText 
            android:id="@+id/mapview_txt_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mapview_lbl_lng"
            android:layout_alignRight="@+id/mapview_txt_lat"
            android:layout_below="@+id/mapview_txt_lat"  
            android:inputType="number"/>
        <Button
            android:id="@+id/mapview_btn_save_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapview_txt_lng"
            android:layout_alignParentLeft="true"
            android:text="@string/save"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/mapview_map_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapview_site_rl">
        <fragment 
		    android:id="@+id/map"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    class="com.google.android.gms.maps.SupportMapFragment"
		    android:scrollbars="vertical"/>
    </RelativeLayout>


</RelativeLayout>